# 524_Group5

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
data/: FFIE.csv  MSFT.csv
docs/: Makefile  example.ipynb
src/stocksignals/: Untitled.ipynb  bbands.py  calc_moving_avg.py  get_data.py  move_ave_10_20.py  move_ave_200days.py  plot_bbands.py  plot_ma_10_20.py  plot_ma_10_20days.py  plot_ma_200days.py
src/stocksignals/data/: MSFT.csv
stocksignals/: README.md  pyproject.toml
stocksignals/docs/: conf.py  make.bat
stocksignals/tests/: test_stocksignals.py
tests/: test_bbands.py  test_calc_moving_avg.py  test_get_data.py  test_plot_bbands.py  test_plot_ma_10_20days.py  test_plot_ma_200days.py
