[tool.poetry]
name = "stocksignals"
version = "0.1.0"
description = "Calculate buy/sell signal indicators for a stock!"
authors = ["Ruslan Dimitrov, Robin Dhilon, Peng Zhang, Chenyang Wang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
yfinance = "^0.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
