[tool.poetry]
name = "stocksignals"
version = "0.1.0"
description = "Calculate buy/sell signal indicators for a stock!"
authors = ["Ruslan Dimitrov, Robin Dhilon, Peng Zhang, Chenyang Wang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
yfinance = "^0.2.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
patch = "^1.16"
raises = "^0.2"
sphinx-autoapi = "^2.0.1"
sphinx-rtd-theme = "^1.1.1"
myst-nb = {version = "^0.17.1", python = "^3.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
